tests/ui/lang/asm/block_tracking_fail.stderr
error: `noreturn` requires a terminator at the end
  --> $DIR/block_tracking_fail.rs:11:9
   |
11 |         asm!("", options(noreturn));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: trailing terminator `OpUnreachable` requires `options(noreturn)`
  --> $DIR/block_tracking_fail.rs:18:9
   |
18 |         asm!("OpUnreachable");
   |         ^^^^^^^^^^^^^^^^^^^^^

error: expected `OpLabel` after terminator `OpKill`
  --> $DIR/block_tracking_fail.rs:25:9
   |
25 | /         asm!(
26 | |             "OpKill",
27 | |             "%sum = OpFAdd _ {x} {x}",
28 | |             x = in(reg) x,
29 | |         );
   | |_________^

error: aborting due to 3 previous errors

